# OpenCLTemplate

./: CLHelper.cpp  CLHelper.h  CMakeLists.txt  Makefile  OpenCLTemplate.vcxproj  OpenCLTemplate.vcxproj.filters  SimpleAddProgram.cpp  SimpleAddProgram.h  main.cpp
src/: CLHelper.cpp  CLHelper.h  CLVis.cpp  CLVis.h  CMakeLists.txt  SDKCommandArgs.cpp  SDKCommon.cpp  SDKCommon.hpp  SDKFile.hpp  SimpleAddKernel.cl  SimpleAddProgram.cpp  SimpleAddProgram.h  main.cpp
