CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(OpenCL REQUIRED)

MESSAGE("OpenCL information:") 
MESSAGE("  OPENCL_INCLUDE_DIRS: ${OPENCL_INCLUDE_DIRS}") 
MESSAGE("  OPENCL_LIBRARIES: ${OPENCL_LIBRARIES}")

SET(Boost_USE_MULTITHREADED ON)

FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)

MESSAGE("Boost information:") 
MESSAGE("  Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}") 
MESSAGE("  Boost_LIBRARIES: ${Boost_LIBRARIES}") 
MESSAGE("  Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")

INCLUDE_DIRECTORIES(. ${OPENCL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "-Wall -O3")

ADD_EXECUTABLE(main
	CLHelper.cpp
	CLHelper.h
	CMakeLists.txt
	SDKCommandArgs.cpp
	SDKCommandArgs.hpp
	SDKCommon.cpp
	SDKCommon.hpp
	SDKFile.cpp
	SDKFile.hpp
	SimpleAddKernel.cl
	SimpleAddProgram.cpp
	SimpleAddProgram.h
	main.cpp
)

TARGET_LINK_LIBRARIES(main
	${OPENCL_LIBRARIES}
	${Boost_LIBRARIES}
)

FILE(COPY SimpleAddKernel.cl DESTINATION ./)
