CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(OpenCL REQUIRED)

MESSAGE("OpenCL information:") 
MESSAGE("  OPENCL_INCLUDE_DIRS: ${OPENCL_INCLUDE_DIRS}") 
MESSAGE("  OPENCL_LIBRARIES: ${OPENCL_LIBRARIES}")

SET(Boost_USE_MULTITHREADED ON)

FIND_PACKAGE(Boost COMPONENTS program_options filesystem system REQUIRED)

MESSAGE("Boost information:") 
MESSAGE("  Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}") 
MESSAGE("  Boost_LIBRARIES: ${Boost_LIBRARIES}") 
MESSAGE("  Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")

INCLUDE_DIRECTORIES(. ${OPENCL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})

SET(CMAKE_CXX_FLAGS "-Wall")

ADD_EXECUTABLE(main
	CLHelper.cpp
	CLHelper.h
	SimpleAddProgram.cpp
	SimpleAddProgram.h
	main.cpp
	
	SimpleAddKernel.cl
)

TARGET_LINK_LIBRARIES(main
	${OPENCL_LIBRARIES}
	${Boost_LIBRARIES}
)

SET(CMAKE_BUILD_TYPE Release)

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_BINARY_DIR}/SimpleAddKernel.cl
	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/SimpleAddKernel.cl ${CMAKE_BINARY_DIR}/SimpleAddKernel.cl
	MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/SimpleAddKernel.cl)
